--- a/packages/colonizers/server/web/login/index.html
+++ b/packages/colonizers/server/web/login/index.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1>Welcome to Colonizers</h1>
+      <h1>Welcome to Catanzin</h1>
     </div>
   </div>
   <div class="row">
@@ -11,11 +11,23 @@
         <form role="form" method="post" action="/login" class="login">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="john.smith">
+            <input
+              type="text"
+              class="form-control"
+              id="username"
+              name="username"
+              placeholder="john.smith"
+            />
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="******">
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="******"
+            />
           </div>
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
@@ -27,21 +39,47 @@
         <form role="form" method="post" action="/signup" class="signup">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="john.smith">
+            <input
+              type="text"
+              class="form-control"
+              id="username"
+              name="username"
+              placeholder="john.smith"
+            />
           </div>
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="John Smith">
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              name="name"
+              placeholder="John Smith"
+            />
           </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="john.smith@example.com">
+            <input
+              type="text"
+              class="form-control"
+              id="email"
+              name="email"
+              placeholder="john.smith@example.com"
+            />
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="******">
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="******"
+            />
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Register</button>
+          <button type="submit" class="btn btn-primary btn-block">
+            Register
+          </button>
         </form>
       </div>
     </div>
